--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -164,11 +164,11 @@
 
                 <h1 class="section-heading">Pour vous preparer</h1>
                 <p class="lead section-paragraph">
-                    C'est important de se familiariser avec les exercices demandés par exemple en les travaillant, ces exercices sont désignés pour montrer ce que vous savez faire en anglais. Si vous n'êtes pas familier avec les éxrcices vous ne serez peut-être pas en position de montrer vos compétences sous le meilleuir jour.
+                    C'est important de se familiariser avec les exercices demandés par exemple en les travaillant, ces exercices sont désignés pour montrer ce que vous savez faire en anglais. Si vous n'êtes pas 1familier avec les exercices vous ne serez peut-être pas en position de montrer vos compétences sous le meilleur jour.
                     <br>
-                    Pour vous aider a préparer cet éxamen il y a des ressources garuites poour s'entrainer : <a href="http://www.cambridgeenglish.org/learning-english/find-free-resources/">Préparation gratuite ressources</a> (Site en anglais)
+                    Pour vous aider a préparer cet examen il y a des ressources garuites poour s'entrainer : <a href="http://www.cambridgeenglish.org/learning-english/find-free-resources/">Préparation gratuite ressources</a> (Site en anglais)
 
-                    Il y a aussi possibilité d'acheter des livres en rapport avec cet éxamen afin de le réussir: <a href="http://www.cambridge.org/gb/cambridgeenglish/official-exam-preparation-materials/exam/cambridge-english-advanced-cae-2015"> Ressources payantes </a> (Site en anglais)
+                    Il y a aussi possibilité d'acheter des livres en rapport avec cet examen afin de le réussir: <a href="http://www.cambridge.org/gb/cambridgeenglish/official-exam-preparation-materials/exam/cambridge-english-advanced-cae-2015"> Ressources payantes </a> (Site en anglais)
 
                 </p>
 
