test selon les ecoles

--- a/pages/TestParEcole.html
+++ b/pages/TestParEcole.html
@@ -76,13 +76,303 @@
 
 <!-- Content Section -->
 <section>
-    <img class="img-titre-test img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Section Heading</h1>
-                <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                <h1>Angleterre</h1>
+                <table align="center">
+                    <tr>
+                        <td></td>                          <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
+                    </tr>
+                    <tr>
+                        <th>Anglia Ruskin University</th>   <td>X</td>      <td>4.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>University of the Arts London</th>  <td>X</td>  <td>entre 5 et 7 selon les cours demandés</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université Aston</th>           <td>100</td>    <td>5</td>      <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Bath</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Bath Spa</th>   <td>X</td>      <td>4.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Birmingham</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Bolton</th>   <td>X</td>      <td>5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Bournemouth</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Bradford</th>   <td>X</td>      <td>4.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Brighton</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Bristol</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université Brunel</th>   <td>92</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Buckingham</th>   <td>X</td>      <td>4</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Cambridge</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université Canterbury Christ Church</th>   <td>87</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Chester</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Chichester</th>   <td>X</td>      <td>5.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>City University, London</th>   <td>100</td>      <td>X</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Coventry</th>   <td>X</td>      <td>5.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Cranfield</th>   <td>92</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université De Montfort</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Derby</th>   <td>213 (sur ordinateur)</td>      <td>6.0 (avec un minimum de 5.5 dans chaque module)</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Durham</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'East Anglia</th>   <td>X</td>      <td>7.5 de moyenne avec 7.5 minimum dans chaque partie</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'East London</th>   <td>X</td>      <td>entre 5.5 et 6.5 selon les cours</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Essex</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'Exeter</th>   <td>X</td>      <td>5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université du Gloucestershire</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Greenwich</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université du Hertfordshire</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Huddersfield</th>   <td>X</td>      <td>4 à 6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Hull</th>   <td>X</td>      <td>5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Keele</th>   <td>79</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université Kingston</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Lancaster</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Leeds</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Leicester</th>   <td>(sur internet): 110 de moyenne (24 minimum dans chaque partie)</td>      <td>7.5 de moyenne, avec au minimum 7.0 dans chaque partie</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Lincoln</th>   <td>80</td>      <td>X</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Liverpool</th>   <td>X</td>      <td>6.5 de moyenne, avec au minimum 5.5 dans chaque partie</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Liverpool Hope</th>   <td>83</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Liverpool John Moores</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Londres</th>   <td>92 avec 24/30 minimum en expression et compréhension écrite et 20/30 en expression est compréhension orale</td>      <td>6.5 de moyenne avec au minimum 6.0 dans chaque partie</td>    <td>X</td>           <td>niveau B</td>
+                    </tr>
+                    <tr>
+                        <th>Courtauld Institute of Art</th>   <td>X</td>      <td>7.0 avec au minimum 6.5 dans chaque partie</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université métropolitaine de Londres</th>   <td>92</td>      <td>X</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Loughborough</th>   <td>90</td>      <td>5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Luton</th>   <td>213</td>      <td>(Minimum score: 5.5 de moyennel et au moins 5.5 pour chaque partie : listening / reading / speaking / writing)</td>    <td>X</td>           <td>Grade C</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Manchester</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université métrolopitaine de Manchester</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université du Middlesex</th>   <td>X</td>      <td>6.5 ( avec 6.0 minimum dans chaque partie)</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Newcastle upon Tyne</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Northampton</th>   <td>X</td>      <td>4.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université Northumbria</th>   <td>X</td>      <td>5.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Nottingham</th>   <td>79</td>      <td>6.0 avec 5.5 minimum dans chaque partie</td>    <td>X</td>           <td>Grade C</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Nottingham Trent</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'Oxford</th>   <td>(sur papier): overall score of 600</td>      <td>overall score of 7.0</td>    <td>X</td>           <td>Grade B</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'Oxford Brookes</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Plymouth</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Portsmouth</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Reading</th>   <td>X</td>      <td>5.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Roehampton</th>   <td>(sur internet) 89</td>      <td>X</td>    <td>X</td>           <td>Grade C</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Salford</th>   <td>X</td>      <td>4.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Sheffield</th>   <td>X</td>      <td>5.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Sheffield Hallam</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Southampton</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Southampton Solent</th>   <td>X</td>      <td>5.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université du Staffordshire</th>   <td>X</td>      <td>4.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Sunderland</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Surrey</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>UUniversité de Sussex</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Teesside</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Warwick</th>   <td>X</td>      <td>5.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Westminster</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>Accepté</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Winchester</th>   <td>(sur ordinateur) 237</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Wolverhampton</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>Grade B2</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Worcester</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de York</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                </table>
+                <h1>Ecosse</h1>
+                <table align="center">
+                    <tr>
+                        <td></td>                       <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'Aberdeen</th>   <td>Accepté</td>      <td>Accepté</td>    <td>X</td>           <td>Accepté</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'Abertay Dundee</th>   <td>213</td>      <td>6</td>    <td>X</td>           <td>Accepté</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Dundee</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'Edinburgh</th>   <td>Accepté</td>      <td>Accepté</td>    <td>X</td>           <td>Accepté</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Glasgow</th>   <td>X</td>      <td>7</td>    <td>X</td>           <td>Grade B</td>
+                    </tr>
+                    <tr>
+                        <th>Université Napier</th>   <td>X</td>      <td>6</td>    <td>56</td>           <td>Accepté</td>
+                    </tr>
+                    <tr>
+                        <th>Université Robert Gordon</th>   <td>X</td>      <td>Accepté</td>    <td>Accepté</td>           <td>Accepté</td>
+                    </tr>
+                    <tr>
+                        <th>Université de St Andrews</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Stirling</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Strathclyde</th>   <td>X</td>      <td>6.5</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                </table>
+                <h1>Irlande du Nord</h1>
+                <table align="center">
+                    <tr>
+                        <td></td>                       <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
+                    </tr>
+                    <tr>
+                        <th>Université Queen's of Belfast</th>   <td>80</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                    <tr>
+                        <th>Université d'Ulster</th>   <td>X</td>      <td>6</td>    <td>X</td>           <td>X</td>
+                    </tr>
+                </table>
+                <h1>Irlande du Nord</h1>
+                <table align="center">
+                    <tr>
+                        <td></td>                       <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Cardiff</th>   <td>90</td>      <td>6.5</td>    <td>X</td>           <td>Grade C</td>
+                    </tr>
+                    <tr>
+                        <th>Université de Glamorgan</th>   <td>X</td>      <td>6</td>    <td>51</td>           <td>X</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
