--- a/index.html
+++ b/index.html
@@ -51,31 +51,55 @@
         <!-- /.container -->
     </nav>
 	<header class="image-bg-fluid-height">
-        <h1 class="titre-site">Le guide des tests d'Anglais</h1>
+        <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
     </header>
 
     <!-- Content Section -->
     <section>
         <div class="container">
             <div class="row">
+               <div class="col-lg-12">
+                   <h1 class="section-heading">Accueil</h1>
+                   <p class="p">
+                       Notre site a pour but de présenter les principaux tests danglais nécessaire pour la poursuite détudes au Royaume-Uni. Vous pourrez retrouver des informations pour chaque test tel que les tarifs, les lieux et dates de passage, une description détaillés du déroulement des épreuves, des méthodes d'entraînement pour aborder les tests le plus sereinement possible... Vous aurez également accès aux écoles supérieures les plus connues et les plus demandées et savoir quels tests vous seront demandés pour les intégrer.
+                   </p>
+               </div>
+               <hr class="hr"/>
                 <div class="col-lg-12">
                     <h1 class="section-heading">Sommaire</h1>
                     <ol>
-                        <li class="lead section-lead">Le TOEFL</li>
-                        <li class="lead section-lead">Le IELTS</li>
-                        <li class="lead section-lead">Le PEARSON</li>
-                        <li class="lead section-lead" >Le Test de cambridge</li>
-                        <li class="lead section-lead">Les écoles et leurs test</li>
+                        <li class="lead section-lead"><a href="pages/TOEFL.html">Le TOEFL</a></li>
+                        <li class="lead section-lead"><a href="pages/IELTS.html">Le IELTS</a></li>
+                        <li class="lead section-lead"><a href="pages/PEARSON.html">Le PEARSON</a></li>
+                        <li class="lead section-lead"><a href="pages/Cambridge.html">Le Test de cambridge</a></li>
+                        <li class="lead section-lead"><a href="pages/TestParEcole.html">Les écoles et leurs test</a></li>
                     </ol>
                 </div>
+                <hr class="hr"/>
                 <div class="col-lg-12">
                     <h1 class="section-heading">Les modalités générales pour passer un test</h1>
-                    <p class="lead section-lead"></p>
+                    <p class="lead section-lead">
+                        Chaque test est constitué pour evaluer certaines capacités, ces capacités reposent sur 4 éléments
+                        <ol>
+                            <li>
+                                La comprénsion de l'oral
+                            </li>
+                            <li>La compréhension de l'écrit</li>
+                            <li>Un oral, ou discussion avec une personne</li>
+                            <li>Ecriture de l'anglais</li>
+                        </ol>
+                    </p>
                     <h1 class="section-heading">Pour se préparer</h1>
                     <h2>Si vous avez peu de temps à y consacrer</h2>
-                    <p class="lead section-lead"></p>
+                    <p class="lead section-lead">
+                        Allez sur internet surfez, baignez vous dans la langue anglaise, il y a énormement de test et tutoriels dur internet, pour améliorer votre anglais.
+                    </p>
                     <h2>Si vous voulez prendre votre temps</h2>
-                    <p class="lead section-lead"></p>
+                    <p class="lead section-lead">
+                        Si vous avez le temps et (un peu l'argent aussi) vous pouvez partir, à l'étranger pour aprendre l'anglais tout en décrouvant un pays, ex: il y a des formations en
+                        irlande qui proposent a la fin du sejour de vous faire passer le test. Si jamais le fait d'être en immersion ne suffit pas on peut rajouter des cours d'anglais
+                        pendant le séjour.
+                    </p>
                 </div>
             </div>
         </div>
