refonte du site

--- a/pages/PEARSON.html
+++ b/pages/PEARSON.html
@@ -33,7 +33,8 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -59,7 +60,8 @@
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests
+                        acceptés par les écoles</a>
                 </li>
             </ul>
         </div>
@@ -80,40 +82,123 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Informations sur le test<br/><small>Le Test PEARSON</small></h1>
-                <p class="lead section-lead">Lieu, Prix, Date :</p>
-                <p class="section-paragraph">Ce test ne peut être passer à un seul endroit pour l'instant en France. Le 10ème arrondissement à Paris.<br/>
-                    Il coûte 210$ en France se qui fait environ 145 euros et il peut être passé à partir du 14 décembre.</p>
-                <p class="lead section-lead">Les épreuves du test :</p>
-                <p class="section-paragraph">
-                    <ul>
-                        <li>expression Oral</li>
-                        <li>comprehension Oral</li>
-                        <li>comprehension Ecrite</li>
-                        <li>expression Ecrite</li>
-                    </ul>
+                <h1 class="section-heading">Informations sur le test<br/>
+                    <small>Le Test PEARSON</small>
+                </h1>
+                <p class="lead section-lead">Lieu de passage :</p>
+                <p class="section-paragraph">En France, 17 lieux de passage sont possible répartie dans 13 villes de
+                    France, la liste complète est disponible <a
+                            href="http://pearsonpte.com/pte-general/can-take/">ici</a>
                 </p>
-                <p class="lead section-lead">La notation :</p>
-                <p class="section-paragraph">Le Pearson note 9 catégories entre 0 et 100 puis en fait la moyenne. Chaque épreuve obtient une note, celles ci séparée en deux catégories :<br />
-                    Les compétences de communications
-                    <ul>
-                        <li>expression Oral</li>
-                        <li>comprehension Oral</li>
-                        <li>comprehension Ecrite</li>
-                        <li>expression Ecrite</li>
-                    </ul>
-                    Les compétences grammaticales
-                    <ul>
-                        <li>grammaire</li>
-                        <li>prononciation</li>
-                        <li>fluidité</li>
-                        <li>vocabulaire</li>
-                        <li>discours écrit</li>
-                    </ul></p>
+                <p class="lead section-lead">Prix :</p>
+                <p class="section-paragraph"> PTE Academic coûte 210$ sois 145€ environ.</p>
+                <p class="lead section-lead">Date :</p>
+                <p class="section-paragraph">Le test est disponible une fois par mois avec des dates très strictes.
+                    Chaque étape de test correspond à des dates précises. <a
+                            href="http://pearsonpte.com/pte-general/test-dates-2/">cliquez ici</a></p>
 
-                <h1 class="section-heading">Pour vous preparer</h1>
-                <p class="section-paragraph">Le site du PEARSON offre la possibilité de préparer le test à partir de différents exercices disponible en ligne. La plupart sont gratuits.<a href="http://www.pearson.fr/ELT/">S'entrainer maintenant</a> <br/>
-                 Ce site offre aussi la possibilité d'acheté des livres pour s'entrainer.<a href="http://www.pearson.fr/catalogue/">Catalogue</a>
+
+                <p class="lead section-lead">L'inscription au test : </p>
+                <p class="section-paragraph">Pour s’inscrire au test il faut préalablement créé un compte sur le site
+                    PTE Academic. Une fois le compte créer un mail avec vos identifiants vous sera envoyée dans les 24h.
+                    Une fois authentifiez-vous pouvez vous inscrire aux différents tests disponibles.</p>
+                <p class="lead section-lead">Description du test :</p>
+                <p class="section-paragraph">
+                    Pour les niveaux 4 et 5, le test se compose de deux parties : un test écrit et un test oral.
+
+                    Le test écrit se divise en 9 tâches, toutes liées à un thème. Il dure 2h55 pour le niveau 5 et 2h30
+                    pour le niveau 4. Il comprend en outre une dictée, des questions à choix multiples, une écriture
+                    d’un courrier de 150-200 mots (correspondance)..
+                    Le test oral dure 8 minutes pour les deux niveaux, elle consiste à une interaction entre vous et un
+                    interlocuteur. L’épreuve se divise en 4 sections, monologue soutenu, discussion , décrire une image
+                    et un jeu de rôles.
+
+
+                </p>
+                <p class="lead section-lead">Score :</p>
+                <p class="section-paragraph">La partie écrite du test est noté sur 75 et la partie oral sur 25.
+                <table>
+                    <tr>
+                        <td>Partie</td>
+                        <td> Compétence</td>
+                        <td> 10</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td> Compréhension Oral et Expression Écrite</td>
+                        <td> 10</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td> Compréhension Oral</td>
+                        <td> 10</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td> Compréhension Oral</td>
+                        <td> 10</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td> Compréhension Écrite</td>
+                        <td> 5</td>
+                    </tr>
+
+                    <tr>
+                        <td>5</td>
+                        <td> Compréhension Écrite</td>
+                        <td> 5</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td> Compréhension Écrite</td>
+                        <td> 8</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td> Compréhension Écrite</td>
+                        <td> 7</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td> Expression Écrite</td>
+                        <td> 10</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td> Expression Écrite</td>
+                        <td> 10</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td> Expression Oral</td>
+                        <td rowspan="4">25</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td> Expression Oral</td>
+                    </tr>
+                    <tr>
+                        <td>12</td>
+                        <td> Expression Oral</td>
+                    </tr>
+                    <tr>
+                        <td>13</td>
+                        <td> Expression Oral</td>
+                    </tr>
+                </table>
+                <br/>
+                <p>
+                    Les résultats sont disponibles entre 5 à 8 semaines après avoir passé le test aux centres dans
+                    lequel vous avez passé le test.
+                </p>
+
+                <h1 class="section-heading">Pour vous préparer</h1>
+                <p class="section-paragraph">Le site du PEARSON offre la possibilité de préparer le test à partir de
+                    différents exercices disponibles en ligne. La plupart sont gratuits.<a
+                            href="http://www.pearson.fr/ELT/">S'entrainer maintenant</a> <br/>
+                    Ce site offre aussi la possibilité d'acheter des livres pour s'entrainer.<a
+                            href="http://www.pearson.fr/catalogue/">Catalogue</a>
                 </p>
             </div>
         </div>
