--- a/index.html
+++ b/index.html
@@ -2,120 +2,142 @@
 <html lang="fr">
 
 <head>
-	<meta charset="utf-8" />
-	<title>Accueil</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/full-width-pics.css">
+    <meta charset="utf-8"/>
+    <title>Accueil</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/full-width-pics.css">
 
-	<!-- Feuille de styles -->
-	<!-- <link rel="stylesheet" href="style.css" /> -->
+    <!-- Feuille de styles -->
+    <!-- <link rel="stylesheet" href="style.css" /> -->
 </head>
 
 <body>
- <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href='index.html' id="accueil">Accueil</a>
-                    </li>
-                    <li>
-                        <a id='TOEFL' href='pages/TOEFL.html' title='Présentation du TOEFL'>TOEFL</a>
-                    </li>
-                    <li>
-                        <a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>IELTS</a>
-                    </li>
-                    <li>
-                        <a id='PEARSON' href='pages/PEARSON.html' title='Présentation du PEARSON'>PEARSON</a>
-                    </li>
-                    <li>
-                        <a id='Cambridge' href='pages/Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
-                    </li>
-                    <li>
-                        <a id='TestParEcole' href='pages/TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
-        <!-- /.container -->
-    </nav>
-	<header class="image-bg-fluid-height">
-        <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
-    </header>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href='index.html' id="accueil">Accueil</a>
+                </li>
+                <li>
+                    <a id='TOEFL' href='pages/TOEFL.html' title='Présentation du TOEFL'>TOEFL</a>
+                </li>
+                <li>
+                    <a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>IELTS</a>
+                </li>
+                <li>
+                    <a id='PEARSON' href='pages/PEARSON.html' title='Présentation du PEARSON'>PEARSON</a>
+                </li>
+                <li>
+                    <a id='Cambridge' href='pages/Cambridge.html' title='Présentation du Cambridge'>Le test de
+                        Cambridge</a>
+                </li>
+                <li>
+                    <a id='TestParEcole' href='pages/TestParEcole.html' title='Les tests acceptés par les écoles'>Les
+                        tests acceptés par les écoles</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+<header class="image-bg-fluid-height">
+    <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
+</header>
 
-    <!-- Content Section -->
-    <section>
-        <div class="container">
-            <div class="row">
-               <div class="col-lg-12">
-                   <h1 class="section-heading">Accueil</h1>
-                   <p class="p">
-                       Notre site a pour but de présenter les principaux tests danglais nécessaire pour la poursuite détudes au Royaume-Uni. Vous pourrez retrouver des informations pour chaque test tel que les tarifs, les lieux et dates de passage, une description détaillés du déroulement des épreuves, des méthodes d'entraînement pour aborder les tests le plus sereinement possible... Vous aurez également accès aux écoles supérieures les plus connues et les plus demandées et savoir quels tests vous seront demandés pour les intégrer.
-                   </p>
-               </div>
-               <hr class="hr"/>
-                <div class="col-lg-12">
-                    <h1 class="section-heading">Sommaire</h1>
-                    <ol>
-                        <li class="lead section-lead"><a href="pages/TOEFL.html">Le TOEFL</a></li>
-                        <li class="lead section-lead"><a href="pages/IELTS.html">Le IELTS</a></li>
-                        <li class="lead section-lead"><a href="pages/PEARSON.html">Le PEARSON</a></li>
-                        <li class="lead section-lead"><a href="pages/Cambridge.html">Le Test de cambridge</a></li>
-                        <li class="lead section-lead"><a href="pages/TestParEcole.html">Les écoles et leurs test</a></li>
-                    </ol>
-                </div>
-                <hr class="hr"/>
-                <div class="col-lg-12">
-                    <h1 class="section-heading">Les modalités générales pour passer un test</h1>
-                    <p class="lead section-lead">
-                        Chaque test est constitué pour evaluer certaines capacités, ces capacités reposent sur 4 éléments
-                        <ol>
-                            <li>
-                                La comprénsion de l'oral
-                            </li>
-                            <li>La compréhension de l'écrit</li>
-                            <li>Un oral, ou discussion avec une personne</li>
-                            <li>Ecriture de l'anglais</li>
-                        </ol>
-                    </p>
-                    <h1 class="section-heading">Pour se préparer</h1>
-                    <h2>Si vous avez peu de temps à y consacrer</h2>
-                    <p class="lead section-lead">
-                        Allez sur internet surfez, baignez vous dans la langue anglaise, il y a énormement de test et tutoriels dur internet, pour améliorer votre anglais.
-                    </p>
-                    <h2>Si vous voulez prendre votre temps</h2>
-                    <p class="lead section-lead">
-                        Si vous avez le temps et (un peu l'argent aussi) vous pouvez partir, à l'étranger pour aprendre l'anglais tout en décrouvant un pays, ex: il y a des formations en
-                        irlande qui proposent a la fin du sejour de vous faire passer le test. Si jamais le fait d'être en immersion ne suffit pas on peut rajouter des cours d'anglais
-                        pendant le séjour.
-                    </p>
-                </div>
+<!-- Content Section -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="section-heading">Accueil</h1>
+                <p class="p">
+                    Notre site a pour but de présenter les principaux tests d'Anglais nécessaire pour la poursuite
+                    d'études au Royaume-Uni. Vous pourrez retrouver des informations pour chaque test tel que les
+                    tarifs, les lieux et dates de passage, une description détaillés du déroulement des épreuves, des
+                    méthodes d'entraînement pour aborder les tests le plus sereinement possible... Vous aurez également
+                    accès aux écoles supérieures les plus connues et les plus demandées et savoir quels tests vous
+                    seront demandés pour les intégrer.
+                </p>
+            </div>
+            <hr class="hr"/>
+            <div class="col-lg-12">
+                <h1 class="section-heading">Sommaire</h1>
+                <ol>
+                    <li class="lead section-lead"><a href="pages/TOEFL.html">Le TOEFL</a></li>
+                    <li class="lead section-lead"><a href="pages/IELTS.html">Le IELTS</a></li>
+                    <li class="lead section-lead"><a href="pages/PEARSON.html">Le PEARSON</a></li>
+                    <li class="lead section-lead"><a href="pages/Cambridge.html">Le Test de cambridge</a></li>
+                    <li class="lead section-lead"><a href="pages/TestParEcole.html">Les écoles et leurs test</a></li>
+                </ol>
+            </div>
+            <hr class="hr"/>
+            <div class="col-lg-12">
+                <h1 class="section-heading">Les modalités générales pour passer un test</h1>
+                <p class="lead section-lead">
+                    Chaque test est constitué pour évaluer 2 capacités : l'oral et l'écrit.
+                    Chacune se divise en deux parties compréhension et expression. Ses capacités reposent sur 4 éléments
+                    :
+                <ol>
+                    <li>La compréhension de l'oral avec des questions sur un document audio</li>
+                    <li>La compréhension de l'écrit avec des questions sur un document écrit</li>
+                    <li>L'expression oral qui repose sur un enregistrement sur un oral ou discussion avec une
+                        personne
+                    </li>
+                    <li>L'Expression écrite : Une ou plusieurs expression écrite sur un thème donné</li>
+                </ol>
+                L'ensemble de ses compétences donne une note générale qui dépende du test passer. En général un note
+                global est donnée. Le détail de la notation peut être aussi indiquer avec la note global. Là aussi cela
+                dépend du test passé. L'ensemble des détails des notations est détailler donc chaque page du test
+                passé.</p>
+                <h1 class="section-heading">Pour se préparer</h1>
+                <h2>Si vous avez peu de temps à y consacrer</h2>
+                <p class="lead section-lead">
+                    Allez sur internet surfez, baignez-vous dans la langue anglaise, il y a énormément de test et
+                    tutoriels sur internet, pour améliorer votre anglais. En général chaque test dispose de leur propre
+                    manière de se prépare à leurs examens. Certains disposent même de livre détailler les différentes
+                    épreuves et
+                    permettant de s'exercer sur des exercices type du test.
+                </p>
+                <h2>Si vous voulez prendre votre temps</h2>
+                <p class="lead section-lead">
+                    Si vous avez le temps et un peu l'argent aussi vous pouvez partir, à l'étranger pour apprendre
+                    l'anglais tout en découvrant un pays, ex: il y a des formations en Irlande qui proposent à la fin du
+                    séjour de vous faire passer le test. Si jamais le fait d'être en
+                    immersion ne suffit pas on peut rajouter des cours d'anglais pendant le séjour.
+                    Sinon essayer d'apprendre l'Anglais toute en vous divertissant. Regardez des films en Anglais, des
+                    articles, des séries sous-titrés en Français. Cela permet de s'imprégner plus de la langue et
+                    d'améliorer sa compréhension mais aussi la prononciation.
+                </p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="section-heading">Sources</h1>
-                    <p class="lead section-lead"><a href="http://www.cambridgeenglish.org/fr/exams/advanced/">http://www.cambridgeenglish.org/fr/exams/advanced/</a></p>
-                </div>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="section-heading">Sources</h1>
+                <p class="lead section-lead"><a href="http://www.cambridgeenglish.org/fr/exams/advanced/">http://www.cambridgeenglish.org/fr/exams/advanced/</a>
+                </p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 </body>
 </html>
 
