--- a/pages/TOEFL.html
+++ b/pages/TOEFL.html
@@ -33,7 +33,8 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -59,7 +60,8 @@
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests
+                        acceptés par les écoles</a>
                 </li>
             </ul>
         </div>
@@ -80,58 +82,100 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Informations sur le test<br/><small>Le Test du TOEFL</small></h1>
+                <h1 class="section-heading">Informations sur le test<br/>
+                    <small>Le TOEFL</small>
+                </h1>
                 <p class="lead section-lead">Lieu de passage :</p>
-                <p class="section-paragraph">Le TOEFL peut se passer dans le monde entier, et dans plus d’une trentaine de sites de France. Il est possible de le passer dans toute les grandes villes de France (Bordeaux, Paris, Lille, Limoges, Lyon, Marseille..).</p>
+                <p class="section-paragraph">Le TOEFL peut se passer dans le monde entier, et dans plus d’une trentaine
+                    de sites de France. Il est possible de le passé dans toutes les grandes villes de France (Bordeaux,
+                    Paris, Lille, Limoges, Lyon, Marseille..).</p>
                 <p class="lead section-lead">Prix :</p>
-                <p class="section-paragraph">Il varie en fonction du pays ou on le passe, en France il coûte 245 dollars soit 221 €.</p>
+                <p class="section-paragraph">Il varie en fonction du pays où on le passe, en France il coûte 245 dollars
+                    soit 221 €.</p>
                 <p class="lead section-lead">Date :</p>
-                <p class="section-paragraph">Les places peuvent, en fonction du lieu ou de la date de passage, s’épuiser rapidement.  Il est donc recommander de s'enregistrer au test 3 à 4 mois avant la date du test. Les dates du test dépende du lieu de passage, on le passe généralement le vendredi ou le samedi. L’ensemble des dates et des lieux de passage son disponible ici (<a href="http://www.ets.org/bin/getprogram.cgi?urlSource=toefl&newRegURL=&test=TOEFL&greClosed=new&greClosedCountry=China&browserType=&toeflType=&redirect=&t_country1=group_France">Dates et lieux de passage du TOEFL</a> )</p>
+                <p class="section-paragraph">Les places peuvent, en fonction du lieu ou de la date de passage, s’épuiser
+                    rapidement. Il est donc recommandé de s'enregistrer au test 3 à 4 mois avant la date du test. Les
+                    dates du test dépendent du lieu de passage, on le passe généralement le vendredi ou le samedi.
+                    L’ensemble des dates et des lieux de passage son disponible ici (<a
+                            href="http://www.ets.org/bin/getprogram.cgi?urlSource=toefl&newRegURL=&test=TOEFL&greClosed=new&greClosedCountry=China&browserType=&toeflType=&redirect=&t_country1=group_France">Dates
+                        et lieux de passage du TOEFL</a> )</p>
                 <p class="lead section-lead">Inscription au test :</p>
-                <p class="section-paragraph">Il est existe plusieurs façon pour s'inscrire au test : en ligne, en personne, par téléphone ou par courrier. La plus accessible et plus rapide reste en ligne.
-                    L'ensemble des détails d’inscription son disponible sur <a href="https://www.ets.org/fr/toefl/ibt/register">ets.org</a></p>
+                <p class="section-paragraph">Il existe plusieurs façons pour s'inscrire au test : en ligne, en personne,
+                    par téléphone ou par courrier. La plus accessible et plus rapide reste en ligne.
+                    L'ensemble des détails d’inscription son disponible sur <a
+                            href="https://www.ets.org/fr/toefl/ibt/register">ets.org</a></p>
                 <p class="lead section-lead">Modalité de passage :</p>
                 <p class="section-paragraph">Vous devez amener deux éléments au centre de test :
-                    -	Votre numéro d'inscription
-                    -	Document(s) d'identité en cours de validité (il est conseillé d’en amener deux).
-                    Il faut prévoir d'arriver à l’épreuve 30 minutes avant l'heure de début du test. Si vous arrivez en retard, vous ne pourrez pas passer le test.
-                    Vous devrez  ensuite signer un accord de confidentialité pour permettre de garder certaines de vos informations confidentielles. Les seuls effets personnels autorisé dans la salle de test son vos documents d’identité. Aucun téléphones ou autres appareils électroniques n’est autorisé pendant les épreuves et les pauses.
+                    - Votre numéro d'inscription
+                    - Document(s) d'identité en cours de validité (il est conseillé d’en amener deux).
+                    Il faut prévoir d'arriver à l’épreuve 30 minutes avant l'heure de début du test. Si vous arrivez en
+                    retard, vous ne pourrez pas passer le test.
+                    Vous devrez ensuite signer un accord de confidentialité pour permettre de garder certaines de vos
+                    informations confidentielles. Les seuls effets personnels autorisés dans la salle de test sont vos
+                    documents d’identité. Aucun téléphone ou autres appareils électroniques n’est autorisé pendant les
+                    épreuves et les pauses.
 
-                    Le test prendre environ 4h répartie entre les différentes épreuves. Après la limite de temps vous ne pourrez plus continuer de répondre. Pendant le test, vous pouvez à tout moment poser une question en levant la main.
-                    Pour passer le test, un clavier anglais QWERTY et un casque d'écoute antibruit avec un micro. Il faut donc apprendre à utiliser un clavier de se type avant de passer l’épreuve en changeant par exemple son clavier d’ordinateur.</p>
+                    Le test prend environ 4h répartie entre les différentes épreuves. Après la limite de temps vous ne
+                    pourrez plus continuer de répondre. Pendant le test, vous pouvez à tout moment poser une question en
+                    levant la main.
+                    Pour passer le test, un clavier anglais QWERTY et un casque d'écoute antibruit avec un micro. Il
+                    faut donc apprendre à utiliser un clavier de ce type avant de passer l’épreuve en changeant par
+                    exemple son clavier d’ordinateur.</p>
                 <p class="lead section-lead">Description du test :</p>
                 <p class="section-paragraph">Le test est composé de 4 épreuves distinctes :
 
-                    Elle commence par la section compréhension écrite (reading) qui dure 60/80 min. Elle comprend 3 ou 4 passages d’extrait de manuels universitaires. Les passages portent sur des sujets différents. Toutes les informations nécessaires pour répondre aux questions se trouvent dans le passage. Chaque extrait comprend 12 à 14 questions.
+                    Elle commence par la section compréhension écrite (reading) qui dure 60/80 min. Elle comprend 3 ou 4
+                    passages d’extrait de manuels universitaires. Les passages portent sur des sujets différents. Toutes
+                    les informations nécessaires pour répondre aux questions se trouvent dans le passage. Chaque extrait
+                    comprend 12 à 14 questions.
 
-                    La section compréhension orale (listening) est composée des deux sous-parties. Une partie de 4 à 6 passages, chacune de 3 à 5 minutes avec 6 questions. Puis 2 à 3 conversations de 3 minutes avec 5 questions par passage. La section dure 60 à 90 minutes. Pendant le test vous pouvez prendre des notes des différents passages audio.
+                    La section compréhension orale (listening) est composée des deux sous-parties. Une partie de 4 à 6
+                    passages, chacune de 3 à 5 minutes avec 6 questions. Puis 2 à 3 conversations de 3 minutes avec 5
+                    questions par passage. La section dure 60 à 90 minutes. Pendant le test vous pouvez prendre des
+                    notes des différents passages audio.
 
-                    la section expression oral (speaking) dure en moyenne 20 minutes avec 6 questions.
-                    Les 2 premières questions demandent utilisation de vos propres idées, opinions et expériences pour y répondre.
+                    la section expression orale (speaking) dure en moyenne 20 minutes avec 6 questions.
+                    Les 2 premières questions demandent utilisation de vos propres idées, opinions et expériences pour y
+                    répondre.
                     Les 4 autres font appel à des situations courantes, comme en classe ou dans les couloirs.
 
-                    Le test se termine par l’expression écrite (Writing), environ 50 min. Elle comprend 2 tâches d’expression écrite : intégrée et indépendante.</p>
+                    Le test se termine par l’expression écrite (Writing), environ 50 min. Elle comprend 2 tâches
+                    d’expression écrite : intégrée et indépendante.</p>
                 <p class="lead section-lead">Score :</p>
-                <p class="section-paragraph">Le score du TOEFL est noté sur 120 et correspond à la somme de 4 scores de compétences.
-                    <ul>
-                        <li>Compréhension écrite (Reading) 0 à 30</li>
-                        <li>Compréhension orale (Listening) 0 à 30</li>
-                        <li>Expression orale (Speaking) 0 à 30</li>
-                        <li>Expression écrite (Writing) 0 à 30</li>
-                    </ul>
-                Vos scores seront disponibles environ 10 jours après la date du test  sur votre compte TOEFL en ligne. Un courrier électronique vous sera envoyé pour vous indiquer la publication de vos résultats. De plus un calendrier des publications de score pour chaque date de test est disponible sur le site TOEFL : <a href="https://www.ets.org/s/toefl/pdf/score_reporting_schedule_test_dates.pdf">ETS.org/TOEFL</a>
+                <p class="section-paragraph">Le score du TOEFL est noté sur 120 et correspond à la somme de 4 scores de
+                    compétences.
+                <ul>
+                    <li>Compréhension écrite (Reading) 0 à 30</li>
+                    <li>Compréhension orale (Listening) 0 à 30</li>
+                    <li>Expression orale (Speaking) 0 à 30</li>
+                    <li>Expression écrite (Writing) 0 à 30</li>
+                </ul>
+                Vos scores seront disponibles environ 10 jours après la date du test sur votre compte TOEFL en ligne. Un
+                courrier électronique vous sera envoyé pour vous indiquer la publication de vos résultats. De plus un
+                calendrier des publications de score pour chaque date de test est disponible sur le site TOEFL : <a
+                    href="https://www.ets.org/s/toefl/pdf/score_reporting_schedule_test_dates.pdf">ETS.org/TOEFL</a>
                 </p>
 
-                <h1 class="section-heading">Pour vous preparer</h1>
-                <p class="section-paragraph">Le site du TOEFL étant très complet, il offre la possibilité de préparer le test à partir des différents exercices disponible en ligne. Certain sont gratuit mais d’autre sont disponible à l’achat.</p>
+                <h1 class="section-heading">Pour vous préparer</h1>
+                <p class="section-paragraph">Le site du TOEFL étant très complet, il offre la possibilité de préparer le
+                    test à partir des différents exercices disponibles en ligne. Certains sont gratuits mais d’autres
+                    sont disponibles à l’achat.</p>
                 <p class="lead section-lead">Quelques liens utiles</p>
-                <p class="section-paragraph">Le site du TOEFL propose un exemple de test complet pour <a href="https://www.ets.org/Media/Tests/TOEFL/pdf/SampleQuestions.pdf">vous entraîner</a>.<br />
-                Il propose aussi une page proposant de pratiquer des questions des tests déjà passer. Il met a disposition différent enregistrement pour les <a href="https://www.ets.org/toefl/ibt/prepare/quick_prep/">parties oral</a>.<br />
+                <p class="section-paragraph">Le site du TOEFL propose un exemple de test complet pour <a
+                        href="https://www.ets.org/Media/Tests/TOEFL/pdf/SampleQuestions.pdf">vous entraîner</a>.<br/>
+                    Il propose aussi une page proposant de pratiquer des questions des tests déjà passer. Il met à
+                    disposition différent enregistrement pour les <a
+                            href="https://www.ets.org/toefl/ibt/prepare/quick_prep/">parties orales</a>.<br/>
 
-                Il existe aussi un livre officiel permettant de se préparer au test. Il est disponible au format eBook ou papier/DVD pour $22.95 sur le <a href="http://store.ets.org/store/ets/en_US/pd/ThemeID.12805600/productID.330514800/categoryId.3552000">site du TOEFL</a> ou une trentaine d’euro sur Amazon.<br />
+                    Il existe aussi un livre officiel permettant de se préparer au test. Il est disponible au format
+                    eBook ou papier/DVD pour $22.95 sur le <a
+                            href="http://store.ets.org/store/ets/en_US/pd/ThemeID.12805600/productID.330514800/categoryId.3552000">site
+                        du TOEFL</a> ou une trentaine d’euro sur Amazon.<br/>
 
-                Il est aussi possible de passer des tests après les avoirs acheter sur le <a href="http://toeflpractice.ets.org/">site du TOEFL</a>.<br />
-                Pour plus de renseignement sur les outils disponible rendez vous <a href="https://www.ets.org/fr/toefl/ibt/prepare/">ici</a>.<br />
+                    Il est aussi possible de passer des tests après les avoirs acheter sur le <a
+                            href="http://toeflpractice.ets.org/">site du TOEFL</a>.<br/>
+                    Pour plus de renseignements sur les outils disponible rendez-vous <a
+                            href="https://www.ets.org/fr/toefl/ibt/prepare/">ici</a>.<br/>
                 </p>
             </div>
         </div>
